# gitdive

./: .gitignore  README.md  pyproject.toml
gitdive/: __init__.py  cli.py
gitdive/core/: __init__.py  builder.py  config.py  constants.py  diff_parser.py  git_cli.py  indexer.py  logger.py  models.py  processor.py  prompts.py  query.py  reporter.py  storage.py  timing.py
