[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gitdive"
version = "0.1.0"
description = "CLI tool for natural language conversations with git repository history"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    {name = "ascl1u", email = "a.liu27568@gmail.com"},
]
keywords = ["git", "cli", "ai", "history", "llm", "rag", "natural-language"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10", 
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Environment :: Console",
]
dependencies = [
    "typer[all]>=0.9.0",
    "llama-index>=0.12.0",
    "llama-index-vector-stores-chroma>=0.3.0",
    "llama-index-embeddings-ollama>=0.2.0",
    "llama-index-llms-ollama>=0.3.0",
    "chromadb>=0.4.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
gitdive = "gitdive.cli:app"

[project.urls]
Homepage = "https://github.com/ascl1u/gitdive"
Repository = "https://github.com/ascl1u/gitdive"
Issues = "https://github.com/ascl1u/gitdive/issues"
Documentation = "https://github.com/ascl1u/gitdive#readme"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
target-version = "py39"
line-length = 88 